--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "@material-tailwind/react": "^2.1.0",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
