--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.2.0",
     "@material-tailwind/react": "^2.1.0",
     "@tanstack/react-query": "^4.32.6",
