--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/server.ts",
+    "start": "node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.ts",
     "lint": "eslint --ext .ts"
@@ -35,6 +35,16 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
-  }
+    "netlify-lambda": "^2.0.16",
+    "path": "^0.12.7",
+    "serverless-http": "^3.2.0"
+  },
+  "preinstall": "npx npm-force-resolutions",
+  "resolutions": {
+    "glob-parent": "^6.0.1"
+ },
+ "overrides": {
+  "chokidar": "3.5.3",
+  "glob-parent": "6.0.2"
+}
 }
